--- a/app/src/main/res/menu/menu_login.xml
+++ b/app/src/main/res/menu/menu_login.xml
@@ -3,4 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".login">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_menu" android:title="@string/action_settings"
+        android:icon="@drawable/ic_drawer" android:orderInCategory="100"
+        app:showAsAction="always"/>
 </menu>
