--- a/app/src/main/res/menu/menu_login.xml
+++ b/app/src/main/res/menu/menu_login.xml
@@ -5,6 +5,6 @@
         android:orderInCategory="100" app:showAsAction="never" />
 
     <item android:id="@+id/action_menu" android:title="@string/action_settings"
-        android:icon="@drawable/ic_drawer" android:orderInCategory="100"
+        android:icon="@drawable/ic_action_search" android:orderInCategory="100"
         app:showAsAction="always"/>
 </menu>
