--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".login"
-    android:id="@+id/login"
+    android:id="@+id/loginpage"
     android:clickable="true"
     android:background="@drawable/loginbackground"
     android:backgroundTint="#ffcbc6c0">
