--- a/app/src/main/res/menu/menu_login.xml
+++ b/app/src/main/res/menu/menu_login.xml
@@ -1,10 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".login">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
 
-    <item android:id="@+id/action_menu" android:title="@string/action_settings"
+    <item android:id="@+id/action_search" android:title="@string/action_settings"
         android:icon="@drawable/ic_action_search" android:orderInCategory="100"
         app:showAsAction="always"/>
 </menu>
