--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".login"
@@ -15,7 +17,7 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/editText"
-        android:text="password"
+        android:text="123456"
         android:layout_above="@+id/login"
         android:layout_centerHorizontal="true" />
 
@@ -25,7 +27,7 @@
         android:id="@+id/username"
         android:inputType = "text"
         android:autoText="false"
-        android:text="username"
+        android:text="teemo@gmail.com"
         android:layout_above="@+id/editText"
         android:layout_alignLeft="@+id/editText"
         android:layout_alignStart="@+id/editText"
