"Recommendation for spot complete!" File Name:JsonParser File Name:Recommendation File Name:ViewAdapter File Name:ViewModel File Name:ViewRow

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/username"
+        android:hint="testtest@gmail.com"
         android:inputType = "text"
         android:autoText="false"
         android:text="teemo@gmail.com"
