--- a/app/src/main/res/layout/channel_content.xml
+++ b/app/src/main/res/layout/channel_content.xml
@@ -1,10 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Tripioneer_channel"
-    >
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Tripioneer">
 
     <LinearLayout
         android:orientation="vertical"
@@ -14,20 +13,21 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
-            android:layout_height="88dp"
+            android:layout_height="wrap_content"
             android:weightSum="1">
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:layout_height="44dp"
+                android:layout_height="58dp"
                 android:id="@+id/imageView"
-                android:layout_weight="0.13" />
+                android:layout_weight="0.17" />
 
-            <EditText
+            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/editText"
-                android:layout_weight="0.65" />
+                android:layout_height="match_parent"
+                android:text="New Text"
+                android:id="@+id/textView"
+                android:layout_weight="0.78" />
         </LinearLayout>
 
         <TabHost
@@ -51,29 +51,32 @@
                     android:layout_height="fill_parent">
 
                     <LinearLayout
-                        android:id="@+id/簡介"
+                        android:id="@+id/linearLayout"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:orientation="vertical">
 
-                        <EditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/editText2" />
                     </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/內容"
+                        android:id="@+id/linearLayout2"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
-                        android:orientation="vertical"></LinearLayout>
+                        android:orientation="vertical">
+
+                        <ListView
+                            android:layout_width="343dp"
+                            android:layout_height="153dp"
+                            android:id="@+id/listView" />
+                    </LinearLayout>
 
                     <LinearLayout
-                        android:id="@+id/分類"
+                        android:id="@+id/linearLayout3"
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
-                        android:orientation="vertical"
-                        android:focusable="false"></LinearLayout>
+                        android:orientation="vertical">
+
+                    </LinearLayout>
                 </FrameLayout>
             </LinearLayout>
         </TabHost>
