--- a/app/src/main/res/layout/list_single.xml
+++ b/app/src/main/res/layout/list_single.xml
@@ -5,13 +5,18 @@
     <TableRow>
         <ImageView
             android:id="@+id/img"
-            android:layout_width="200dp"
-            android:layout_height="150dp"/>
+            android:layout_width="100dp"
+            android:layout_height="60dp"/>
 
         <TextView
             android:id="@+id/txt"
             android:layout_width="wrap_content"
-            android:layout_height="150dp" />
+            android:layout_height="60dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            />
 
     </TableRow>
 </TableLayout>
