--- a/app/src/main/res/layout/tripioneer_tour_list_single.xml
+++ b/app/src/main/res/layout/tripioneer_tour_list_single.xml
@@ -4,12 +4,12 @@
     android:layout_height="match_parent" >
     <TableRow>
         <ImageView
-            android:id="@+id/img"
+            android:id="@+id/trip_img"
             android:layout_width="50dp"
             android:layout_height="50dp"/>
 
         <TextView
-            android:id="@+id/txt"
+            android:id="@+id/trip_title"
             android:layout_width="wrap_content"
             android:layout_height="50dp" />
 
