--- a/app/src/main/res/layout/channel_main.xml
+++ b/app/src/main/res/layout/channel_main.xml
@@ -27,9 +27,7 @@
     <android.support.v4.app.FragmentTabHost
             android:id="@android:id/tabhost"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-
-            >
+            android:layout_height="match_parent">
 
         <LinearLayout
                 android:layout_width="match_parent"
