--- a/app/src/main/res/layout/tripioneer_tour_listview.xml
+++ b/app/src/main/res/layout/tripioneer_tour_listview.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Tripioneer">
 
     <ListView
-        android:id="@+id/listViewXD"
+        android:id="@+id/listView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
