--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -14,7 +14,7 @@
         <ImageView
             android:id="@+id/placePic"
             android:layout_width="match_parent"
-            android:layout_height="200dp" />
+            android:layout_height="150dp" />
 
 
         <LinearLayout
@@ -37,15 +37,18 @@
                     android:id="@+id/placeName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="5dp"
+                    android:layout_margin="0dp"
+                    android:padding="0dp"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="#fff"/>
                 <TextView
                     android:id="@+id/addTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="0dp"
+                    android:padding="0dp"
                     android:text="2015/08/18  單一景點"
-                    android:padding="5dp"
-                    android:textColor="#fff"/>
+                    android:textColor="#fff" />
 
             </LinearLayout>
         </LinearLayout>
