--- a/app/src/main/res/layout/list_single.xml
+++ b/app/src/main/res/layout/list_single.xml
@@ -9,8 +9,6 @@
             android:layout_width="100dp"
             android:layout_height="60dp"/>
 
-
-
         <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -23,11 +21,11 @@
             android:id="@+id/txt"
             android:textStyle="bold"
             android:layout_width="wrap_content"
-            android:layout_height="20dp"
+            android:layout_height="wrap_content"
             android:paddingLeft="2dp"
             android:paddingRight="1dp"
             android:paddingTop="1dp"
-            android:paddingBottom="1dp"
+            android:paddingBottom="1dp" android:textAppearance="?android:attr/textAppearanceMedium"
             />
 
             <!-- 這邊是景點簡介文字 -->
