--- a/app/src/main/res/layout/activity_place_mimic_googlemap.xml
+++ b/app/src/main/res/layout/activity_place_mimic_googlemap.xml
@@ -88,7 +88,8 @@
                     android:orientation="vertical">
 
                     <ImageButton
-                        android:src="@drawable/ic_star"
+                        android:src="@drawable/ic_spot_phone"
+                        android:background="@null"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <TextView
@@ -105,6 +106,7 @@
                     android:layout_marginLeft="25dp">
                     <ImageButton
                         android:src="@drawable/ic_star"
+                        android:background="@null"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <TextView
@@ -130,9 +132,10 @@
                 android:orientation="horizontal"
                 android:layout_marginLeft="25dp">
                 <ImageButton
-                    android:src="@drawable/ic_tripioneer_treasurebox_location_2"
+                    android:src="@drawable/ic_spot_address"
+                    android:background="@null"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="57dp" />
                 <TextView
                     android:id="@+id/addr"
                     android:text="台南市安平區安平路165號"
@@ -146,11 +149,13 @@
                 android:orientation="horizontal"
                 android:layout_marginLeft="25dp">
                 <ImageButton
-                    android:src="@drawable/ic_ic_history_black_24dp"
+                    android:src="@drawable/ic_spot_time"
+                    android:background="@null"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="57dp" />
                 <TextView
                     android:id="@+id/hours"
+                    android:layout_gravity="bottom"
                     android:text="
                     星期一 07:00~19:00
                     星期二 07:00~19:00
