完成行程 1.排序 2.刪除(復原做不出來) 3.新增(做40%)

--- a/app/src/main/res/layout/activity_trip_mdsign.xml
+++ b/app/src/main/res/layout/activity_trip_mdsign.xml
@@ -30,12 +30,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="200dp" />
 
-                <ListView
+                <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
                     android:id="@+id/listView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scrollbars="vertical">
-                </ListView>
+                    android:scrollbars="vertical"/>
+
 
             </LinearLayout>
         </LinearLayout>
