--- a/app/src/main/res/layout/channel_info.xml
+++ b/app/src/main/res/layout/channel_info.xml
@@ -6,6 +6,7 @@
 
     <TextView
         android:id="@+id/text"
+        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
