--- a/app/src/main/res/layout/activity_roadplan_choose_mode.xml
+++ b/app/src/main/res/layout/activity_roadplan_choose_mode.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,7 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="1">
-
+        <include
+            android:id="@+id/tool_bar"
+            layout="@layout/tool_bar">
+        </include>
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -16,15 +21,15 @@
 
             <ImageButton
                     android:background="@drawable/ic_drive_eta_black_36dp"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:id="@+id/driving_mode" />
 
 
             <ImageButton
                     android:background="@drawable/ic_directions_walk_black_36dp"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:id="@+id/walking_mode" />
 
         </LinearLayout>
@@ -60,6 +65,16 @@
             android:id="@+id/routes_listview" />
 
     </LinearLayout>
+    <!-- The navigation drawer -->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/RecyclerView"
+        android:layout_width="320dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
 
+        android:background="#ffffff"
+        android:scrollbars="vertical">
 
-</RelativeLayout>
+    </android.support.v7.widget.RecyclerView>
+
+</android.support.v4.widget.DrawerLayout>
